# fast-tg-bot-aiogram

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py
core/: __init__.py  middleware.py
db/: __init__.py  base.py  sql.py
handler/: __init__.py  start.py
migration/: env.py
migration/versions/: 470766aec482_creating.py
template/: middleware.py  start.py
utils/: config.py
